force-app/main/default/objects/DD_Coverage_Spec__c/DD_Coverage_Spec__c.object-meta.xml
<CustomObject>
    <description>Coverage category specification with default coinsurance. Child of Product.</description>
    <label>Coverage Spec</label>
    <nameField><displayFormat>CS-{00000}</displayFormat><label>Spec ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Coverage Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>