force-app/main/default/objects/DD_Coverage_Spec__c/fields/Coinsurance_NonPPO__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance_NonPPO__c</fullName>
    <label>Coinsurance Non-PPO</label>
    <type>Percent</type>
    <precision>5</precision><scale>0</scale><required>false</required>
    <description>Plan pays % at non-PPO dentists (default)</description>
</CustomField>