force-app/main/default/objects/DD_Coverage_Spec__c/fields/Coinsurance_PPO__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance_PPO__c</fullName>
    <label>Coinsurance PPO</label>
    <type>Percent</type>
    <precision>5</precision><scale>0</scale><required>false</required>
    <description>Plan pays % at PPO dentists (default)</description>
</CustomField>