force-app/main/default/objects/DD_Coverage_Spec__c/fields/Counts_Toward_Max__c.field-meta.xml
<CustomField>
    <fullName>Counts_Toward_Max__c</fullName>
    <label>Counts Toward Annual Max</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether payments count toward annual max</description>
</CustomField>