force-app/main/default/objects/DD_Coverage_Spec__c/fields/Coverage_Code__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Code__c</fullName>
    <label>Coverage Code</label>
    <type>Text</type>
    <length>10</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>DNP, BAS, EPO, MAJ, ORT</description>
</CustomField>