force-app/main/default/objects/DD_Coverage_Spec__c/fields/Coverage_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Name__c</fullName>
    <label>Coverage Name</label>
    <type>Text</type>
    <length>100</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>e.g. Diagnostic and Preventive, Basic, Major</description>
</CustomField>