force-app/main/default/objects/DD_Coverage_Spec__c/fields/Deductible_Applies__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Applies__c</fullName>
    <label>Deductible Applies</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether deductible applies to this category</description>
</CustomField>