force-app/main/default/objects/DD_Coverage_Spec__c/fields/Is_Optional__c.field-meta.xml
<CustomField>
    <fullName>Is_Optional__c</fullName>
    <label>Optional Coverage</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True for optional riders like Ortho</description>
</CustomField>