force-app/main/default/objects/DD_Coverage_Spec__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>DD_Product__c</referenceTo><relationshipLabel>Coverage Specs</relationshipLabel><relationshipName>Coverage_Specs</relationshipName><required>true</required>
    <description>Parent root product</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>