force-app/main/default/objects/DD_Coverage_Spec__c/fields/Requires_Preauth__c.field-meta.xml
<CustomField>
    <fullName>Requires_Preauth__c</fullName>
    <label>Requires Pre-Authorization</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether services in this coverage need preauth</description>
</CustomField>