force-app/main/default/objects/DD_Coverage_Spec__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>Coverage_Name__c</columns>
    <columns>Coverage_Code__c</columns>
    <columns>Product__c</columns>
    <columns>Coinsurance_PPO__c</columns>
    <columns>Is_Optional__c</columns>
</ListView>